syntax = "proto3";

message _BalancesV3Wrapper {
  string address                = 1;
  
  message _Balance {
    string contract_address       = 1;
    string amount                 = 2;
    string locked_amount          = 3;
    string name                   = 4;
    string symbol                 = 5;
    optional int32 decimals       = 6;
    optional string icon          = 7;
    optional string price         = 8;
    repeated string sparkline     = 9;
  }
  
  repeated _Balance balances    = 2;
}
